# vese-app

./: Procfile.api  README.md  nuxt.config.js  package.json  pyproject.toml  vercel.json
_tmp/: .gitignore  package.json
_tmp/api/: index.js
_tmp/layouts/: default.vue
_tmp/prisma/: schema.prisma
api/: Procfile.api  index.js
api/api/: settings.py  urls.py
api/app/: views.py
assets/scss/: main.scss
client/: Procfile  nuxt.config.js  package.json
client/components/: Divider.vue  JumbotronHero.vue  Masthead.vue  Navbar.vue  Page.vue  TheFooter.vue  TheHeader.vue
client/layouts/: default.vue
client/pages/: about.vue  events.vue  index.vue  info.vue  join.vue  members.vue
client/pages/events/: _id.vue  index.vue
components/: Masthead.vue  TheFooter.vue  TheHeader.vue  UserBar.vue
pages/: about.vue  contact.vue  index.vue  login.vue
pages/login/: callback.vue  index.vue
prisma/: schema.prisma  schema.sql
prisma/migrations/20221007021047_initial/: migration.sql
store/: index.js
ui/: nuxt.config.js  package.json
ui/components/: TheHeader.vue  UserBar.vue
ui/pages/: about.vue  gallery.vue  members.vue
ui/pages/events/: _id.vue  index.vue
