[tool.poetry]
name = "vese-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
Django = "^4.0.6"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
ui-install = { shell = "cd client && yarn install" }
ui-dev = { shell = "cd client && yarn dev" } 
api-migrations = { shell = "python api/manage.py makemigrations && python api/manage.py migrate" }
api-dev = { shell = "python api/manage.py runserver" }