[tool.poetry]
name = "vese-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
Django = "^4.0.6"
djangorestframework = "3.13.1"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"